# sample_QC

./: .gitignore  LICENSE  README.md  git_setup.py  pyproject.toml  requirements.txt
data/: demo_sample.tsv  mock_fragpipe.tsv  mock_spectronaut.tsv
data/FragPipe_result1/: combined_protein.tsv
sample_qc/: __init__.py  cli.py  metrics.py  parser.py  report.py
tests/: __init__.py  test_metrics.py  test_parser.py  test_report.py
