[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sample-qc"
version = "0.1.0"
description = "Quality control metrics and reporting for genomic sample data"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "WeiQiang" }]
requires-python = ">=3.9"
keywords = ["bioinformatics", "QC", "quality-control", "genomics", "sequencing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "plotly>=5.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
sample-qc = "sample_qc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sample_qc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
